add more keys, update style

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.6.0", features = [] }
+dioxus-desktop = "0.6.3"
 rand = "0.9.2"
 rodio = "0.21.1"
 strum = "0.27.2"
